--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -15,7 +15,7 @@
                             <p class="mb-0 opacity-75">{{ current_date.strftime('%A, %d de %B de %Y') }}</p>
                         </div>
                         <div class="text-end">
-                            <a href="{{ url_for('attendance.registrar_asistencia') }}" class="btn btn-light btn-lg shadow-sm me-2">
+                            <a href="{{ url_for('attendance.index') }}" class="btn btn-light btn-lg shadow-sm me-2">
                                 <i class="fas fa-qrcode me-2"></i>Registrar Asistencia
                             </a>
                             <a href="{{ url_for('reports.exportar_pdf') }}" class="btn btn-outline-light btn-lg">
